Performance enhancements and first draft of GUI